Create the components

--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,7 +1,7 @@
 h1 {
   font-family: 'Press Start 2P', sans-serif; 
   font-size: 35px;
-  color: #8e44ad;
+  color: #9B59B6;
   
   text-shadow: 5px 5px rgba(0, 0, 0, 0.2);
 }
