--- a/css/components/subtitle.css
+++ b/css/components/subtitle.css
@@ -1,6 +1,6 @@
 h2 {
   font-size: 25px;
-  text-shadow: 4px 4px rgba(0, 0, 0, 0.2);
+  text-shadow: 4px 4px #000;
 
   font-family: 'Press Start 2P', sans-serif; 
   color: #FFF;  
