--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,32 @@ header nav a:last-child::before {
   margin-bottom: 30px;
 }
 
+.banner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-image: url(/assets/img/photo.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 700px;
+
+  border-bottom: 5px solid #000;
+} 
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 640px;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+}
+
 @media (max-width:830px) {
  /*
   Hamburger
