--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: red;
 
   background-image: url(/assets/img/photo.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 700px;
-
+  width: 100%;
+  height: 80vh;
   border-bottom: 5px solid #000;
 } 
 
