--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,10 +1,12 @@
 .button {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   background: #8e44ad;
   font-family: 'Fira Code';
   color: #FFF;
   height: 55px;
-  line-height: 55px;
   padding: 0px 20px;
 
   box-shadow: 5px 5px rgba(0, 0, 0, 0.8);
