--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,9 @@ body {
 #box {
   display: inline-flex;
   flex-direction: column;
-  justify-content: center;
   background: #3A4042;
   text-align: center;
   box-shadow: 10px 10px 0 #000;
-
   padding: 42px;
 }
 
@@ -21,12 +19,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: red;
+  background-color: #2c3e50;
 
-  background-image: url(/assets/img/photo.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
   width: 100%;
   height: 80vh;
   border-bottom: 5px solid #000;
@@ -44,9 +38,11 @@ body {
   margin-top: 40px;
 }
 
-@media (max-width:830px) {
- /*
-  Hamburger
- */
+@media (max-width: 360px ){
+  #box h1 {
+    font-size: 18px;
+  }
+  #box h2 {
+    font-size: 14px;
+  }
 }
-
