--- a/css/components/button.css
+++ b/css/components/button.css
@@ -6,8 +6,8 @@
   background: #8e44ad;
   font-family: 'Fira Code';
   color: #FFF;
-  height: 55px;
-  padding: 0px 20px;
+  padding: 18px 20px;
+  font-size: 19px;
 
   box-shadow: 5px 5px rgba(0, 0, 0, 0.8);
   transition: all 250ms;
