--- a/css/components/header.css
+++ b/css/components/header.css
@@ -3,7 +3,7 @@ header {
   justify-content: space-between;
   align-items: center;
   
-	background-color: #34495e;
+	background-color: #282936;
 	border-bottom: 5px solid #000;
 
   padding: 6px 10px;
