--- a/css/components/section.css
+++ b/css/components/section.css
@@ -1,21 +1,5 @@
 .section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  background: #77438b;
-  width: 100%;
-
-  border-bottom: 5px solid #34495e;
-}
-
-.section h1 {
-  color: #FFF;
-  margin: 30px 0px;
-}
-
-@media (max-width: 600px) {
-  .section h1 {
-    font-size: 18px;
-  }
+  background-color: #282936;
+  padding: 50px 0px 100px 0px;
+  border-bottom: 5px solid #000;
 }
