--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,7 +1,12 @@
-h1 {
+.title {
   font-family: 'Press Start 2P', sans-serif; 
-  font-size: 35px;
+  font-size: 40px;
   color: #9B59B6;
   
   text-shadow: 5px 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.title.-second {
+  color: #FFF;
 }
