--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -7,7 +7,7 @@
 
   width: 100%;
   height: 700px;
-  border-bottom: 5px solid #000;
+  border-bottom: 5px solid rgb(74, 31, 133);
 } 
 
 .wrapper {
@@ -24,8 +24,6 @@
   text-align: center;
   box-shadow: 10px 10px 0 #000;
   padding: 42px;
-  
-
 }
 
 #box h1 {
