--- a/css/components/section.css
+++ b/css/components/section.css
@@ -2,4 +2,7 @@
   background-color: #282936;
   padding: 50px 0px 100px 0px;
   border-bottom: 5px solid #000;
+
+  display: flex;
+  flex-direction: column;
 }
