--- a/css/components/skill-tech.css
+++ b/css/components/skill-tech.css
@@ -4,18 +4,41 @@
   color: #FFF;
 
   display: flex;
+  align-items: center;
+  margin: 10px 0px;
 }
 
 .skill-tech h2 {
   margin-bottom: 60px;
 }
 
-.skill-tech .icon {
-  margin-right: 25px;
+.skill-tech h3 {
+  margin-bottom: 10px;
 }
 
-.skill-tech .wrapper-skill {
+.skill-tech .icon {
+  margin-right: 25px;
+  width: 90px;
+}
+
+
+.skill-tech .icon:hover {
+  animation: rotate 150ms linear;
+}
+
+.skill-tech .right{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+
+@keyframes rotate {
+  from {
+    transform: rotate(-10deg);
+  }
+
+  to {
+    transform: rotate(0deg  );
+  }
 }
